# ed25519-benchmarks

./: .gitmodules  Cargo.toml  README.md
benches/: criterion_benches.rs
res/: byz.ron  forged_10.ron  hard_byz.ron  random_10.ron
results/: plot.py
results/criterion_data/: byz_nowarmup0.json  byz_nowarmup1.json  byz_nowarmup2.json  byz_nowarmup3.json  byz_nowarmup4.json  byz_nowarmup5.json  byz_nowarmup6.json  byz_nowarmup7.json  byz_nowarmup8.json  byz_nowarmup9.json  byz_warmup0.json  byz_warmup1.json  byz_warmup2.json  byz_warmup3.json  byz_warmup4.json  byz_warmup5.json  byz_warmup6.json  byz_warmup7.json  byz_warmup8.json  byz_warmup9.json  traditional0.json  traditional1.json  traditional2.json  traditional3.json  traditional4.json  traditional5.json  traditional6.json  traditional7.json  traditional8.json  traditional9.json
results/custom_bench_data/: no_flush0.json  no_flush1.json  no_flush2.json  no_flush3.json  no_flush4.json  no_flush5.json  no_flush6.json  no_flush7.json  no_flush8.json  no_flush9.json  overwrite0.json  overwrite1.json  overwrite2.json  overwrite3.json  overwrite4.json  overwrite5.json  overwrite6.json  overwrite7.json  overwrite8.json  overwrite9.json  wbinv0.json  wbinv1.json  wbinv2.json  wbinv3.json  wbinv4.json  wbinv5.json  wbinv6.json  wbinv7.json  wbinv8.json  wbinv9.json
src/: input_generation.rs  lib.rs  main.rs
