[package]
edition = "2021" 
name = "ed25519_hacking" 
rust-version = "1.66" # for bench_black_box
version = "0.1.0" 

[dependencies]
curve25519-dalek-instrumented = {package = "curve25519-dalek", path = "./curve25519-dalek", features = ["serde"]}
ed25519-dalek = {version = "1.0.1", features = ["serde"]}
ed25519-dalek-instrumented = {package = "ed25519-dalek", path = "./ed25519-dalek", features = ["serde"]}
once_cell = "1.17"
rand = "0.7"
ron = "0.8"
serde = {version = "1", features = ["derive"]}
serde_json = { version = "1", features = ["std"] }

[dev-dependencies]
criterion = {version = "0.4", features = ["html_reports"]}

[[bench]]
harness = false
name = "criterion_benches"
